Revision history for Perl extension HTTP::BrowserDetect.

{{$NEXT}}
    - Start detecting Brew OS (andrewmoise)
    - Fix detecting Netfront as Netscape in some cases (andrewmoise)
    - Start recognizing Teleca as an alias for Obigo (andrewmoise)
    - Start detecting versions of Teleca / Obigo (andrewmoise)
    - Note in documentation that 'wap' doesn't mean WAP only
      (andrewmoise)

3.12 2016-05-05 08:59:46 America/Toronto
    - Start detecting a few robots we weren't detecting before
      ('verify' or 'analyze' in the name, or +https: beginning
      the URL) (andrewmoise)
    - Stop including the version in robot_string() in some
      cases (andrewmoise)
    - Start returning undef instead of 0 for robot() if there's
      no robot (andrewmoise)
    - Fix _version() documentation for robot, os, and version not
      to make formatting garbage in the output, and to be
      consistent (andrewmoise)

3.11 2016-05-04 20:32:47 America/Toronto
    - Add a test for Kindle Fire (andrewmoise)

3.10 2016-03-29 22:15:35 America/Toronto
    - Big change: Add robot version detection, distinct from browser
      version (first cut) (andrewmoise)
    - Add browsers: Pubsub (Safari RSS reader), ADM (Android Download
      Manager), ImageSearcherPro (iOS app) (andrewmoise)
    - Add robots: Google favicon, malware/shellcode, phplib,
      Verisign IPS agent, Nutch, thumbtack-thunderdome (andrewmoise)
    - Distinguish Bingbot from MSNbot (andrewmoise)
    - Only detect wget based on the beginning of the user-agent
      (andrewmoise)
    - Misc fixes to test support scripts (andrewmoise)
    - Add Kindle Fire (andrewmoise)
    - Detect curl by matching /^curl/ as well as /libcurl/
      (andrewmoise)
    - Remove webcrawler robot test (it triggers on too many distinct
      robots which all include "webcrawler") (andrewmoise)

3.00 2016-02-29 22:57:45 America/Toronto
    - Make "mobile" false when "tablet" is true.  This is a breaking change and