@@ -7,6 +7,7 @@ Revision history for Perl extension HTTP::BrowserDetect.
     - Start detecting versions of Teleca / Obigo (andrewmoise)
     - Note in documentation that 'wap' doesn't mean WAP only
       (andrewmoise)
+    - Start detecting Polaris mobile browser (andrewmoise)
 
 3.12 2016-05-05 08:59:46 America/Toronto
     - Start detecting a few robots we weren't detecting before
